# demucs-mlx

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/skill/: SKILL.md  __init__.py  manifest.txt
.claude/skills/skill/kernels/: __init__.py  autotune_cache.py  utils.py
.claude/skills/skill/references/: apple-silicon-optimization-guide.md  attention-kernel-guide.md  attention-variants-guide.md  cuda-to-metal-guide.md  kernel-debugging-walkthrough.md  kernel-templates.md  mlx-integration.md  multi-dim-grid-patterns.md  mx-compile-interaction.md  production-error-handling.md  profiling-guide.md  quantized-kernel-patterns.md  simdgroup-matrix-guide.md  testing-patterns.md  troubleshooting.md
.claude/skills/skill/scripts/: attention_kernel.py  attention_variants_kernel.py  batch_elementwise_kernel.py  bench_all.py  benchmark_rmsnorm.py  dequant_matvec_kernel.py  e2e_custom_kernels.py  layernorm_kernel.py  multihead_rope_kernel.py  rmsnorm_kernel.py  simdgroup_matmul_kernel.py  softmax_kernel.py
.claude/skills/skill/tests/: smoke_test.py
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: linter.yml  publish.yml  release-pypi.yml  release-testpypi.yml  tests.yml
demucs_mlx/: __init__.py  api.py  apply_mlx.py  mlx_convert.py  mlx_hdemucs.py  mlx_htdemucs.py  model_converter.py  separate.py  spec_mlx.py  spectral_ops.old.py
demucs_mlx/archive/: apply_mlx_recovered.py  hdemucs.forcemps.py  htdemucs.forcemps.py  mmi.py  mmi_ft.py  repro.py  spec.current.py  spec.forcemps.py  states.py  utils_mlx.py
docs/: api.md  development.md  platform.md  release.md
docs/archive/: mdx.md  sdx23.md  training.md
tests/: bench_metal_kernels.py  test_metal_kernels.py
